fix(PN-18464): fix RECAG012EventBuilder checkAllOcrResponse